[gd_scene load_steps=14 format=3 uid="uid://deahjbvovxuvn"]

[ext_resource type="Script" path="res://Scenes/Battle/battle.gd" id="1_ivyfm"]
[ext_resource type="PackedScene" uid="uid://dk5618o5l67d5" path="res://Models/Characters/Players/players.tscn" id="2_a6unq"]
[ext_resource type="Script" path="res://Scenes/Battle/enemy_side_battle.gd" id="2_cdpmu"]
[ext_resource type="Script" path="res://Scenes/Battle/battle_setup.gd" id="3_dbox5"]
[ext_resource type="Texture2D" uid="uid://4wrb6xe7w3o3" path="res://Assets/icon.svg" id="3_x5jg1"]
[ext_resource type="Script" path="res://Scenes/Battle/battle_input_processing.gd" id="4_1gqnq"]
[ext_resource type="PackedScene" uid="uid://b3nogdpgqda7d" path="res://Models/Characters/battle_sprite.tscn" id="4_5t7r8"]
[ext_resource type="Script" path="res://Scenes/Battle/battle_key_processing.gd" id="5_6gl7k"]
[ext_resource type="Resource" uid="uid://d1ojuriup7dgc" path="res://all_enemies.tres" id="5_6mwjl"]
[ext_resource type="Script" path="res://Scenes/Battle/battle_turn_actions.gd" id="5_jqv44"]
[ext_resource type="Script" path="res://Scenes/Battle/battle_actions.gd" id="6_mlml3"]
[ext_resource type="PackedScene" uid="uid://twvv0wexmurt" path="res://Models/Menus/OptionMenus/options.tscn" id="11_bvqio"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hqfu"]
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Battle" type="Node" node_paths=PackedStringArray("players", "enemies", "setup", "process_input", "process_turns", "process_actions", "canvas_layer")]
script = ExtResource("1_ivyfm")
no_of_enemies = 2
enemy_group = ExtResource("5_6mwjl")
players = NodePath("Players")
enemies = NodePath("Enemies")
setup = NodePath("Setup")
process_input = NodePath("Input")
process_turns = NodePath("Turns")
process_actions = NodePath("Actions")
canvas_layer = NodePath("CanvasLayer")

[node name="Setup" type="Node" parent="." node_paths=PackedStringArray("player_section", "choice", "skill_panel", "desc_box_parent", "action_log")]
script = ExtResource("3_dbox5")
player_section = NodePath("../CanvasLayer/ActorContainer/PlayerSection")
choice = NodePath("../CanvasLayer/ActionBoxUI/VBox/Actions")
skill_panel = NodePath("../CanvasLayer/ActionBoxUI/VBox/SkillPanel")
desc_box_parent = NodePath("../CanvasLayer/ActionBoxUI/VBox")
action_log = NodePath("../CanvasLayer/ActionBoxUI/VBox/LogPanel/ScrollContainer/MarginContainer/LogText")

[node name="Input" type="Node" parent="." node_paths=PackedStringArray("choice", "skill_panel", "dummy_control", "desc_box", "dummy_option")]
script = ExtResource("4_1gqnq")
choice = NodePath("../CanvasLayer/ActionBoxUI/VBox/Actions")
skill_panel = NodePath("../CanvasLayer/ActionBoxUI/VBox/SkillPanel")
dummy_control = NodePath("../DummyControl")
desc_box = NodePath("../CanvasLayer/ActionBoxUI/VBox/DescriptionPanel")
dummy_option = NodePath("../CanvasLayer/ActionBoxUI/DummyOption")

[node name="KeyProcessing" type="Node" parent="Input" node_paths=PackedStringArray("log_panel")]
script = ExtResource("5_6gl7k")
log_panel = NodePath("../../CanvasLayer/ActionBoxUI/VBox/LogPanel")

[node name="Turns" type="Node" parent="." node_paths=PackedStringArray("turncount_label")]
script = ExtResource("5_jqv44")
turncount_label = NodePath("../CanvasLayer/Count/MarginContainer/GridContainer/Label2")

[node name="Actions" type="Node" parent="."]
script = ExtResource("6_mlml3")

[node name="Players" parent="." instance=ExtResource("2_a6unq")]
visible = false
position = Vector2(910, 229)

[node name="Enemies" type="Node2D" parent="." node_paths=PackedStringArray("enemy_section")]
visible = false
script = ExtResource("2_cdpmu")
enemy_section = NodePath("../CanvasLayer/ActorContainer/EnemySection")
battle_sprite_scene = ExtResource("4_5t7r8")

[node name="DummyControl" type="Button" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
show_behind_parent = true
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_x5jg1")

[node name="ActorContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="PlayerSection" type="HBoxContainer" parent="CanvasLayer/ActorContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="EnemySection" type="HBoxContainer" parent="CanvasLayer/ActorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleSprite" parent="CanvasLayer/ActorContainer/EnemySection" instance=ExtResource("4_5t7r8")]
visible = false
layout_mode = 2

[node name="ActionBoxUI" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.511
anchor_top = 0.513
anchor_right = 0.511
anchor_bottom = 1.0
offset_left = -830.12
offset_top = -14.04
offset_right = 787.88
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DummyOption" type="Button" parent="CanvasLayer/ActionBoxUI"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.1
theme_override_styles/focus = SubResource("StyleBoxFlat_6hqfu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6hqfu")
disabled = true
button_mask = 0
flat = true

[node name="VBox" type="HBoxContainer" parent="CanvasLayer/ActionBoxUI"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LogPanel" type="PanelContainer" parent="CanvasLayer/ActionBoxUI/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ActionBoxUI/VBox/LogPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ActionBoxUI/VBox/LogPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LogText" type="Label" parent="CanvasLayer/ActionBoxUI/VBox/LogPanel/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Actions" type="VBoxContainer" parent="CanvasLayer/ActionBoxUI/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Attack" type="Button" parent="CanvasLayer/ActionBoxUI/VBox/Actions"]
layout_mode = 2
size_flags_vertical = 3
text = "Attack"

[node name="Skills" type="Button" parent="CanvasLayer/ActionBoxUI/VBox/Actions"]
layout_mode = 2
size_flags_vertical = 3
text = "Skills"

[node name="Items" type="Button" parent="CanvasLayer/ActionBoxUI/VBox/Actions"]
layout_mode = 2
size_flags_vertical = 3
text = "Items"

[node name="Guard" type="Button" parent="CanvasLayer/ActionBoxUI/VBox/Actions"]
layout_mode = 2
size_flags_vertical = 3
text = "Guard"

[node name="Run" type="Button" parent="CanvasLayer/ActionBoxUI/VBox/Actions"]
layout_mode = 2
size_flags_vertical = 3
text = "Run"

[node name="SkillPanel" parent="CanvasLayer/ActionBoxUI/VBox" instance=ExtResource("11_bvqio")]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionPanel" type="PanelContainer" parent="CanvasLayer/ActionBoxUI/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Count" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_top = 30.0
offset_right = -33.0
offset_bottom = 53.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Count"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Count/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/Count/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Turn: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Count/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/ActionBoxUI/VBox/Actions/Attack" to="Input" method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionBoxUI/VBox/Actions/Skills" to="Input" method="_on_skills_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionBoxUI/VBox/Actions/Items" to="Input" method="_on_items_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionBoxUI/VBox/Actions/Guard" to="Input" method="_on_guard_pressed"]
[connection signal="pressed" from="CanvasLayer/ActionBoxUI/VBox/Actions/Run" to="Input" method="_on_run_pressed"]
[connection signal="item_activated" from="CanvasLayer/ActionBoxUI/VBox/SkillPanel" to="Input" method="_on_skill_panel_item_activated"]
[connection signal="item_selected" from="CanvasLayer/ActionBoxUI/VBox/SkillPanel" to="Input" method="_on_skill_panel_item_selected"]
